<resources>
    <string name="app_name">TallerCarros</string>
    <string-array name="lvopciones">
        <item>@string/registro</item>
        <item>@string/listarCarros</item>
        <item>@string/reportes</item>
    </string-array>
    <string name="Registropormarca">registro por marca</string>
    <string name="Marcaferrari">Marca Ferrari</string>
    <string name="MarcaNissan">Marca Nissan</string>
    <string name="MarcaPorche">Marca Porche</string>
    <string name="error_1">Digite La Placa</string>
    <string name="error_2">Digite Precio</string>
    <string name="mensaje">Registro Exitoso</string>
    <string name="CarrosRegistrados">Carros Registrados</string>
    <string name="RegistrodeCarros">REGISTRO DE CARROS</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string-array name="cmdMarca">
        <item>@string/ferrari</item>
        <item>@string/nissan</item>
        <item>@string/porche</item>
    </string-array>
    <string name="kia" translatable="false">Kia</string>
    <string name="chevrolet" translatable="false">Chevrolet</string>
    <string name="renault" translatable="false">Renault</string>


    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string-array name="cmdColor">
        <item>@string/rojo</item>
        <item>@string/dorado</item>
        <item>@string/rojo2</item>
    </string-array>
    <string-array name="cmdModelo">
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
    </string-array>
    <string name="precio">Precio</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="informecarros">INFORME CARROS</string>
    <string name="registropormarca">Registro Por Marca</string>
    <string name="rojo">rojo</string>
    <string name="dorado">dorado</string>
    <string name="rojo2">rojo2</string>
    <string name="nissan">nissan</string>
    <string name="porche">porche</string>
    <string name="ferrari">ferrari</string>
    <string name="registro">registro</string>
    <string name="listarCarros">listarcarros</string>
    <string name="reportes">reportes</string>
</resources>
