<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danilo.tallercarros.Registro">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/RegistrodeCarros" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/placa" />

            <EditText
                android:id="@+id/txtPlaca"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtMarca"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/marca" />

            <Spinner
                android:id="@+id/cmdMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.11" />

            <TextView
                android:id="@+id/txtModelo"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:text="@string/modelo" />

            <Spinner
                android:id="@+id/cmdModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.18" />

            <TextView
                android:id="@+id/txtColor"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/color" />

            <Spinner
                android:id="@+id/cmdColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precio" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnBorrar"
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/borrar" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
